# sdl2-cppm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: example.cpp
include/SDL2/: SDL_config.h
src/: debug.cpp  debug.cppm  enums.inc  event.cpp  event.cppm  face.h  keycode.cppm  renderer.cpp  renderer.cppm  scancode.cppm  sdl2.cpp  sdl2.cppm  surface.cpp  surface.cppm  test.cpp  texture.cpp  texture.cppm  timer.cpp  timer.cppm  types.cpp  types.cppm  window.cpp  window.cppm
test/: test.cpp
